update .min.js and .min.css, set wide map as default, fix popup layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -1295,7 +1295,7 @@ input[type="radio"] {
   position: absolute;
   left: 50%;
   margin-left: 271px;
-  z-index: 3000;
+  z-index: 3;
   top: 65px;
 }
 
